Sun Nov 11 01:45:43 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMView.java
	  src/org/jcae/mesh/MeshBoraViewer3d.java
	  src/org/jcae/mesh/MeshOEMMViewer3d.java
	  src/org/jcae/mesh/MeshOEMMCoarseViewer.java: Files are removed
	and put into a new viewer3d-amibe module.  This way there is no
	dependency between viewer3d and amibe modules, and build.properties
	does not have to be tweaked when compiling.

Sat Nov 10 19:22:37 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractMesh.java: Class removed, it is
	merged into Mesh.
	* src/org/jcae/mesh/amibe/ds/AbstractVertex.java: Class removed, it is
	merged into Vertex.  This class was useful for visualization when
	adjacency relations are not needed, but overhead was very small.
	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java: Class removed, it
	is merged into Triangle which is no more an abstract class.  Methods
	which were previously abstract now return an exception, they are
	defined only if adjacency relations are requested.  This is not a
	problem because such situations would have returned
	ClassCastException.

Wed Oct 31 15:13:39 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObjectGroups): Sort
	groups according to their identifier.
	* src/org/jcae/mesh/amibe/util/UNVReader.java (readGroup): Set groupId
	on triangles.

Tue Oct 30 13:58:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/ClassPathEntityResolver.java (resolveEntity):
	Replace getSystemResourceAsStream by getResourceAsStream, the former
	confuses groovy and netbeans class loaders.
	* src/org/jcae/mesh/amibe/validation/QualityFloat.java (split): New
	split() signature with a list of float arguments to have a finer
	control on quality bounds.
	* src/org/jcae/mesh/amibe/patch/ElementPatchFactory.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java